--- a/src/config.json
+++ b/src/config.json
@@ -4,4 +4,11 @@
             "address": "0x5FbDB2315678afecb367f032d93F642f64180aa3"
         }
     }
+    ,
+
+    "11155111": {
+        "dappazon": {
+            "address": "0x85fA96D33f285e972aA7A1972CEa6b8a49C4C968"
+        }
+    }
 }
