--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://umerfarooq777/github.io/dappazon",
+  "homepage": "https://umerfarooq777.github.io/dappazon",
   "name": "dappazon",
   "version": "0.1.0",
   "private": true,
